--- a/stylesheets/sass/core.scss
+++ b/stylesheets/sass/core.scss
@@ -3,6 +3,7 @@
 @import 'components/reset';
 @import 'components/textstyling';
 @import 'components/navbar';
+@import 'components/heroes';
 
 // Elements
 a{
@@ -10,7 +11,7 @@ a{
 }
 
 body{
-  font-family: "Barlow", sans-serif;
+  font-family: Barlow, sans-serif;
   background-color: #303B41;
   display: flex;
   justify-content: center;
@@ -20,7 +21,11 @@ body{
 
 // ID's
 #siteContainer{
-  height: 100vh;
   width: 1024px;
   background-color: #ffffff;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
