Edited heroes.scss partial, changed favicon slightly

--- a/stylesheets/sass/components/_heroes.scss
+++ b/stylesheets/sass/components/_heroes.scss
@@ -1,4 +1,5 @@
-// Classes
+// Homepage
+  // Classes
 .heroContainer{
   height: 399px;
   width: 100%;
@@ -31,4 +32,16 @@
       font-weight: 300;
     }
   }
+}
+
+// Gallery Page
+  // Classes
+
+
+  // ID's
+#galleryHero{
+  background:{
+    image: url('');
+  }
+  width: 800px;
 }
