--- a/stylesheets/sass/components/_navbar.scss
+++ b/stylesheets/sass/components/_navbar.scss
@@ -4,6 +4,7 @@ $navBarHeight:  80px;
 // Classes
 .navBarOption{
   height: 100%;
+  position: relative;
   color: white;
   padding-left: 10px;
   padding-right: 10px;
@@ -50,31 +51,54 @@ $navBarHeight:  80px;
   width: 100%;
   background-color: #303B41;
   font-size: 2em;
-  color: #ffffff;
+  color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
+  a{
+    color: white;
+  }
+
   #navBarLogo{
     display: flex;
     align-items: center;
+    color: white;
+    transition: .5s;
+
+    &:hover{
+      color: #0BBCCB;
+      transition: .5s;
+
+      svg{
+        g{
+          g{
+            fill: #0BBCCB;
+            transition: .5s;
+          }
+        }
+      }
+    }
   }
 
   #logo{
     height: 70px;
     width: 70px;
     margin-right: 5px;
-    background:{
-      image: url('imgs/logoWhite.svg');
-      size: contain;
-      position: center;
-      repeat: no-repeat;
+
+    svg{
+      g{
+        g{
+          fill: white;
+          transition: .5s;
+        }
+      }
     }
   }
 
   #navBarOptions{
     height: 100%;
-    width: 55%;
+    width: 45%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -85,11 +109,11 @@ $navBarHeight:  80px;
 #membersMenu{
   position: absolute;
   top: $navBarHeight;
-  left: 66vw;
+  // left: 66vw;
 }
 
 #aboutMenu{
   position: absolute;
   top: $navBarHeight;
-  left: 78vw;
+  // left: 78vw;
 }
