--- a/stylesheets/sass/core.css
+++ b/stylesheets/sass/core.css
@@ -103,24 +103,18 @@ body {
   #navBar #navBarLogo {
     display: flex;
     align-items: center;
-    color: white;
-    transition: .5s; }
-    #navBar #navBarLogo:hover {
-      color: #0BBCCB;
-      transition: .5s; }
-      #navBar #navBarLogo:hover svg g g {
-        fill: #0BBCCB;
-        transition: .5s; }
+    color: white; }
   #navBar #logo {
     height: 70px;
     width: 70px;
-    margin-right: 5px; }
-    #navBar #logo svg g g {
-      fill: white;
-      transition: .5s; }
+    margin-right: 5px;
+    background-image: url("imgs/logoWhite.svg");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat; }
   #navBar #navBarOptions {
     height: 100%;
-    width: 45%;
+    width: 55%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -128,11 +122,13 @@ body {
 
 #membersMenu {
   position: absolute;
-  top: 80px; }
+  top: 80px;
+  left: 66vw; }
 
 #aboutMenu {
   position: absolute;
-  top: 80px; }
+  top: 80px;
+  left: 78vw; }
 
 .heroContainer {
   height: 399px;
