Fixed images, made them divs, replaced spans with <p> tags

--- a/stylesheets/css/core-min.css
+++ b/stylesheets/css/core-min.css
@@ -1,169 +1,1 @@
-/* CSS RESET */
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline; }
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block; }
-
-body {
-  line-height: 1; }
-
-ol, ul {
-  list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-a {
-  text-decoration: none; }
-
-body {
-  font-family: Barlow, sans-serif;
-  background-color: #303B41;
-  display: flex;
-  justify-content: center; }
-
-.barlowLight {
-  font-weight: 300; }
-
-.barlowBold {
-  font-weight: 700; }
-
-.navBarOption {
-  height: 100%;
-  position: relative;
-  color: white;
-  padding-left: 10px;
-  padding-right: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transition: .5s; }
-  .navBarOption span {
-    color: white;
-    transition: .5s; }
-    .navBarOption span:hover {
-      color: #0BBCCB;
-      transition: .5s; }
-  .navBarOption:hover .navBarMenu {
-    display: block;
-    transition: .5s; }
-  .navBarOption .navBarMenu {
-    background-color: rgba(48, 59, 65, 0.8);
-    padding: 0px 0px 10px 0px;
-    box-sizing: border-box;
-    display: none;
-    transition: .5s; }
-    .navBarOption .navBarMenu ul li {
-      padding: 10px 20px; }
-
-#navBar {
-  height: 80px;
-  width: 100%;
-  background-color: #303B41;
-  font-size: 2em;
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center; }
-  #navBar a {
-    color: white; }
-  #navBar #navBarLogo {
-    display: flex;
-    align-items: center;
-    color: white;
-    transition: .5s; }
-    #navBar #navBarLogo:hover {
-      color: #0BBCCB;
-      transition: .5s; }
-      #navBar #navBarLogo:hover svg g g {
-        fill: #0BBCCB;
-        transition: .5s; }
-  #navBar #logo {
-    height: 70px;
-    width: 70px;
-    margin-right: 5px; }
-    #navBar #logo svg g g {
-      fill: white;
-      transition: .5s; }
-  #navBar #navBarOptions {
-    height: 100%;
-    width: 45%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center; }
-
-#membersMenu {
-  position: absolute;
-  top: 80px; }
-
-#aboutMenu {
-  position: absolute;
-  top: 80px; }
-
-.heroContainer {
-  height: 399px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center; }
-  .heroContainer img {
-    height: 100%;
-    width: 600px; }
-  .heroContainer .heroTextContainer {
-    width: 384px;
-    padding: 0px 40px;
-    text-align: left;
-    display: flex;
-    flex-direction: column; }
-    .heroContainer .heroTextContainer h1 {
-      font-size: 2em;
-      font-family: Barlow, sans-serif;
-      font-weight: 700; }
-    .heroContainer .heroTextContainer span {
-      font-size: 2em;
-      font-family: Barlow, sans-serif;
-      font-weight: 300; }
-
-#siteContainer {
-  width: 1024px;
-  background-color: #ffffff;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start; }
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}a{text-decoration:none}body{font-family:Barlow, sans-serif;background-color:#303B41;display:flex;justify-content:center}.barlowLight{font-weight:300}.barlowBold{font-weight:700}.navBarOption{height:100%;position:relative;color:white;padding-left:10px;padding-right:10px;display:flex;justify-content:space-between;align-items:center;transition:.5s}.navBarOption span{color:white;transition:.5s}.navBarOption span:hover{color:#0BBCCB;transition:.5s}.navBarOption:hover .navBarMenu{display:block;transition:.5s}.navBarOption .navBarMenu{background-color:rgba(48,59,65,0.8);padding:0px 0px 10px 0px;box-sizing:border-box;display:none;transition:.5s}.navBarOption .navBarMenu ul li{padding:10px 20px}#navBar{height:80px;width:100%;background-color:#303B41;font-size:2em;color:white;display:flex;justify-content:space-between;align-items:center}#navBar a{color:white}#navBar #navBarLogo{display:flex;align-items:center;color:white;transition:.5s}#navBar #navBarLogo:hover{color:#0BBCCB;transition:.5s}#navBar #navBarLogo:hover svg g g{fill:#0BBCCB;transition:.5s}#navBar #logo{height:70px;width:70px;margin-right:5px}#navBar #logo svg g g{fill:white;transition:.5s}#navBar #navBarOptions{height:100%;width:45%;display:flex;flex-direction:row;justify-content:space-between;align-items:center}#membersMenu{position:absolute;top:80px}#aboutMenu{position:absolute;top:80px}.heroContainer{height:399px;width:100%;display:flex;flex-direction:row;justify-content:flex-start;align-items:center}.heroContainer .heroImage{height:100%;width:600px}.heroContainer .heroTextContainer{width:384px;padding:0px 40px;text-align:left;display:flex;flex-direction:column}.heroContainer .heroTextContainer h1{font-size:2em;font-family:Barlow, sans-serif;font-weight:700}.heroContainer .heroTextContainer p{font-size:2em;font-family:Barlow, sans-serif;font-weight:300}#scenery{background:url("imgs/scenery600px.jpg");background-position:center;background-size:cover}#beach{background:url("imgs/beach600px.jpg");background-position:center;background-size:cover}#moorings{background:url("imgs/moorings600px.jpg");background-position:center;background-size:cover}#siteContainer{width:1024px;background-color:#ffffff;box-sizing:border-box;display:flex;flex-direction:column;align-items:center;justify-content:flex-start}
